wip: hydrostatic balance in a box
co-authored-by: Zhaoyi Shen <pkuszy@gmail.com>

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -190,6 +190,10 @@ steps:
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --perturb_initstate false --job_id sphere_hydrostatic_balance_rhoe"
         artifact_paths: "sphere_hydrostatic_balance_rhoe/*"
 
+      - label: ":computer: Box hydrostatic balance (ρe_tot)"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config box --perturb_initstate false --hyperdiff false --dt 20secs --t_end 1days --job_id box_hydrostatic_balance_rhoe"
+        artifact_paths: "box_hydrostatic_balance_rhoe/*"
+
       - label: ":computer: baroclinic wave (ρe_tot)"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --job_id sphere_baroclinic_wave_rhoe --dt 580secs --regression_test true"
         artifact_paths: "sphere_baroclinic_wave_rhoe/*"
