--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -86,6 +86,14 @@ steps:
         agents:
           slurm_ntasks: 64
 
+      - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky high resolution hightop rayleigh sponge(35e5, 10) Float64"
+        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --rad clearsky --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --z_max 45e3 --z_elem 50 --dz_bottom 30 --dz_top 3e3 --h_elem 16 --kappa_4 1e16 --rayleigh_sponge true --zd_rayleigh 35e3 --alpha_rayleigh_w 10 --alpha_rayleigh_uh 0 --dt 150secs --t_end 800days --dt_save_to_disk 10days --job_id longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64 --FLOAT_TYPE Float64"
+        artifact_paths: "longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 64
+
   - group: "Low resolution long runs"
 
     steps:
