--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -45,6 +45,9 @@ steps:
       - "julia --project=perf -e 'using Pkg; Pkg.precompile()'"
       - "julia --project=perf -e 'using Pkg; Pkg.status()'"
 
+      - echo "--- Download artifacts"
+      - "julia --project=examples artifacts/download_artifacts.jl"
+
     agents:
       slurm_cpus_per_task: 8
     env:
