--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -69,9 +69,9 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 ArgParse = "1.1"
-ArtifactWrappers = "0.1"
+ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
-CLIMAParameters = "0.4, 0.5, 0.6"
+CLIMAParameters = "0.4, 0.5, 0.6, 0.7"
 ClimaCore = "0.10"
 CloudMicrophysics = "0.9"
 Dierckx = "0.5"
@@ -88,7 +88,7 @@ OperatorFlux = "0.1"
 OrderedCollections = "1.4"
 OrdinaryDiffEq = "5.64.0"
 PoissonRandom = "0.4"
-PrettyTables = "1.3"
+PrettyTables = "1.3, 2"
 RRTMGP = "0.6"
 RootSolvers = "0.2, 0.3"
 SciMLBase = "~1.38.3"
