--- a/test/Project.toml
+++ b/test/Project.toml
@@ -68,10 +68,10 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 ArgParse = "1.1"
-ArtifactWrappers = "0.1"
+ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 BlockArrays = "0.16"
-CLIMAParameters = "0.4, 0.5, 0.6"
+CLIMAParameters = "0.4, 0.5, 0.6, 0.7"
 ClimaComms = "0.3"
 ClimaCommsMPI = "0.3"
 ClimaCore = "0.10"
@@ -101,7 +101,7 @@ OrderedCollections = "1.4"
 OrdinaryDiffEq = "5.64.0"
 Plots = "1.27"
 PoissonRandom = "0.4"
-PrettyTables = "1.3"
+PrettyTables = "1.3, 2"
 ProgressLogging = "0.1"
 QuadGK = "2.4"
 RRTMGP = "0.6"
