--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -34,87 +34,87 @@ steps:
 
   - wait
 
-  - group: "Targeted resolution AMIP long runs"
+  # - group: "Targeted resolution AMIP long runs"
 
-    steps:
+  #   steps:
 
-      - label: ":computer: baroclinic wave (ρe_tot) high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_highres"
-        artifact_paths: "longrun_bw_rhoe_highres/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 32
+  #     - label: ":computer: baroclinic wave (ρe_tot) high resolution"
+  #       command: "mpiexec julia --project=examples examples/hybrid/driver.jl --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_highres"
+  #       artifact_paths: "longrun_bw_rhoe_highres/*"
+  #       env:
+  #         CLIMACORE_DISTRIBUTED: "MPI"
+  #       agents:
+  #         slurm_ntasks: 32
 
-      - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres"
-        artifact_paths: "longrun_bw_rhoe_equil_highres/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 32
+  #     - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution"
+  #       command: "mpiexec julia --project=examples examples/hybrid/driver.jl --moist equil --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 100days --dt_save_to_disk 10days --job_id longrun_bw_rhoe_equil_highres"
+  #       artifact_paths: "longrun_bw_rhoe_equil_highres/*"
+  #       env:
+  #         CLIMACORE_DISTRIBUTED: "MPI"
+  #       agents:
+  #         slurm_ntasks: 32
 
-      - label: ":computer: held suarez (ρe_tot) high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 800days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_highres"
-        artifact_paths: "longrun_hs_rhoe_highres/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 32
+  #     - label: ":computer: held suarez (ρe_tot) high resolution"
+  #       command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 800days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_highres"
+  #       artifact_paths: "longrun_hs_rhoe_highres/*"
+  #       env:
+  #         CLIMACORE_DISTRIBUTED: "MPI"
+  #       agents:
+  #         slurm_ntasks: 32
 
-      - label: ":computer: held suarez (ρe_tot) high resolution hightop"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_max 45e3 --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 800days --job_id longrun_hs_rhoe_highres_hightop --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoe_highres_hightop/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 32
+  #     - label: ":computer: held suarez (ρe_tot) high resolution hightop"
+  #       command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --z_max 45e3 --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 400secs --t_end 800days --job_id longrun_hs_rhoe_highres_hightop --dt_save_to_disk 10days"
+  #       artifact_paths: "longrun_hs_rhoe_highres_hightop/*"
+  #       env:
+  #         CLIMACORE_DISTRIBUTED: "MPI"
+  #       agents:
+  #         slurm_ntasks: 32
 
-      - label: ":computer: held suarez (ρe_tot) equilmoist high resolution"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 150secs --t_end 400days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres"
-        artifact_paths: "longrun_hs_rhoe_equil_highres/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 64
+  #     - label: ":computer: held suarez (ρe_tot) equilmoist high resolution"
+  #       command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme bulk --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 150secs --t_end 400days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres"
+  #       artifact_paths: "longrun_hs_rhoe_equil_highres/*"
+  #       env:
+  #         CLIMACORE_DISTRIBUTED: "MPI"
+  #       agents:
+  #         slurm_ntasks: 64
 
-      - label: ":computer: held suarez (ρe_tot) equilmoist high resolution monin obukhov Float64"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 150secs --t_end 400days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_monin_obukhov_FLoat64 --FLOAT_TYPE Float64"
-        artifact_paths: "longrun_hs_rhoe_equil_highres_monin_obukhov_Float64/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 64
+  #     - label: ":computer: held suarez (ρe_tot) equilmoist high resolution monin obukhov Float64"
+  #       command: "mpiexec julia --project=examples examples/hybrid/driver.jl --forcing held_suarez --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --z_elem 45 --dz_bottom 30 --h_elem 16 --kappa_4 1e16 --dt 150secs --t_end 400days --dt_save_to_disk 10days --job_id longrun_hs_rhoe_equil_highres_monin_obukhov_FLoat64 --FLOAT_TYPE Float64"
+  #       artifact_paths: "longrun_hs_rhoe_equil_highres_monin_obukhov_Float64/*"
+  #       env:
+  #         CLIMACORE_DISTRIBUTED: "MPI"
+  #       agents:
+  #         slurm_ntasks: 64
 
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky high resolution hightop rayleigh sponge(35e5, 10) Float64"
-        command: "mpiexec julia --project=examples examples/hybrid/driver.jl --rad clearsky --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --z_max 45e3 --z_elem 50 --dz_bottom 30 --dz_top 3e3 --h_elem 16 --kappa_4 1e16 --rayleigh_sponge true --zd_rayleigh 35e3 --alpha_rayleigh_w 10 --alpha_rayleigh_uh 0 --dt 150secs --t_end 800days --dt_save_to_disk 10days --job_id longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64 --FLOAT_TYPE Float64"
-        artifact_paths: "longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64/*"
-        env:
-          CLIMACORE_DISTRIBUTED: "MPI"
-        agents:
-          slurm_ntasks: 64
+  #     - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky high resolution hightop rayleigh sponge(35e5, 10) Float64"
+  #       command: "mpiexec julia --project=examples examples/hybrid/driver.jl --rad clearsky --moist equil --vert_diff true --surface_scheme monin_obukhov --microphy 0M --z_max 45e3 --z_elem 50 --dz_bottom 30 --dz_top 3e3 --h_elem 16 --kappa_4 1e16 --rayleigh_sponge true --zd_rayleigh 35e3 --alpha_rayleigh_w 10 --alpha_rayleigh_uh 0 --dt 150secs --t_end 800days --dt_save_to_disk 10days --job_id longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64 --FLOAT_TYPE Float64"
+  #       artifact_paths: "longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64/*"
+  #       env:
+  #         CLIMACORE_DISTRIBUTED: "MPI"
+  #       agents:
+  #         slurm_ntasks: 64
 
-  - group: "Low resolution long runs"
+  # - group: "Low resolution long runs"
 
-    steps:
+  #   steps:
 
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist gray radiation"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad gray --microphy 0M --dt 450secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_gray --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_aquaplanet_rhoe_equil_gray/*"
-        agents:
-          slurm_cpus_per_task: 8
+  #     - label: ":computer: aquaplanet (ρe_tot) equilmoist gray radiation"
+  #       command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad gray --microphy 0M --dt 450secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_gray --dt_save_to_sol 1days --dt_save_to_disk 10days"
+  #       artifact_paths: "longrun_aquaplanet_rhoe_equil_gray/*"
+  #       agents:
+  #         slurm_cpus_per_task: 8
 
-      - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad allskywithclear --microphy 0M --viscous_sponge true --kappa_2_sponge 1e7 --dt 300secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_allsky --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_aquaplanet_rhoe_equil_allsky/*"
-        agents:
-          slurm_cpus_per_task: 8
+  #     - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation"
+  #       command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --vert_diff true --surface_scheme bulk --moist equil --rad allskywithclear --microphy 0M --viscous_sponge true --kappa_2_sponge 1e7 --dt 300secs --t_end 600days --fps 30 --job_id longrun_aquaplanet_rhoe_equil_allsky --dt_save_to_sol 1days --dt_save_to_disk 10days"
+  #       artifact_paths: "longrun_aquaplanet_rhoe_equil_allsky/*"
+  #       agents:
+  #         slurm_cpus_per_task: 8
 
-      - label: ":computer: held suarez (ρe_int)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --t_end 1200days --fps 30 --job_id longrun_hs_rhoeint --dt_save_to_sol 1days --dt_save_to_disk 10days"
-        artifact_paths: "longrun_hs_rhoeint/*"
-        agents:
-          slurm_cpus_per_task: 8
+  #     - label: ":computer: held suarez (ρe_int)"
+  #       command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --t_end 1200days --fps 30 --job_id longrun_hs_rhoeint --dt_save_to_sol 1days --dt_save_to_disk 10days"
+  #       artifact_paths: "longrun_hs_rhoeint/*"
+  #       agents:
+  #         slurm_cpus_per_task: 8
 
   - group: "Experimental Long runs"
 
@@ -160,11 +160,11 @@ steps:
         agents:
           slurm_ntasks: 32
 
-  - group: "TurbulenceConvection"
-    steps:
+  # - group: "TurbulenceConvection"
+  #   steps:
 
-      - label: ":balloon: Compressible single column EDMF TRMM_LBA"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case TRMM_LBA --dt_save_to_sol 5mins --z_elem 90 --z_stretch false --z_max 17000 --rayleigh_sponge true --zd_rayleigh 15000 --job_id longrun_compressible_edmf_trmm --dt 0.2secs --t_end 6hours"
-        artifact_paths: "longrun_compressible_edmf_trmm/*"
-        agents:
-          slurm_mem: 20GB
+  #     - label: ":balloon: Compressible single column EDMF TRMM_LBA"
+  #       command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --turbconv edmf --turbconv_case TRMM_LBA --dt_save_to_sol 5mins --z_elem 90 --z_stretch false --z_max 17000 --rayleigh_sponge true --zd_rayleigh 15000 --job_id longrun_compressible_edmf_trmm --dt 0.2secs --t_end 6hours"
+  #       artifact_paths: "longrun_compressible_edmf_trmm/*"
+  #       agents:
+  #         slurm_mem: 20GB
