--- a/Project.toml
+++ b/Project.toml
@@ -57,7 +57,7 @@ StaticArrays = "1.4"
 StatsBase = "0.33"
 StochasticDiffEq = "6.42"
 SurfaceFluxes = "0.4"
-Thermodynamics = "0.9"
+Thermodynamics = "0.9, 0.10"
 UnPack = "1"
 julia = "1.7"
 
