CompatHelper: bump compat for FastGaussQuadrature to 0.5, (keep existing compat)

--- a/ode_compat_examples/Project.toml
+++ b/ode_compat_examples/Project.toml
@@ -81,7 +81,7 @@ DiffEqBase = "~6.84.0"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
-FastGaussQuadrature = "0.4"
+FastGaussQuadrature = "0.4, 0.5"
 ForwardDiff = "0.10"
 Glob = "1.3"
 Insolation = "0.3"
