--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -77,7 +77,7 @@ DiffEqBase = "5, 6"
 DiffEqCallbacks = "2"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
-FastGaussQuadrature = "0.4"
+FastGaussQuadrature = "0.4, 0.5"
 ForwardDiff = "0.10"
 Glob = "1.3"
 Insolation = "0.3"
