--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -76,7 +76,7 @@ Dierckx = "0.5"
 DiffEqBase = "5, 6"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
-FastGaussQuadrature = "0.4"
+FastGaussQuadrature = "0.4, 0.5"
 Glob = "1.3"
 JSON = "0.21"
 LambertW = "0.4"
