--- a/test/Project.toml
+++ b/test/Project.toml
@@ -82,7 +82,7 @@ DiffEqCallbacks = "2"
 DiffEqNoiseProcess = "5.9"
 Distributions = "0.25"
 DocStringExtensions = "0.8, 0.9"
-FastGaussQuadrature = "0.4"
+FastGaussQuadrature = "0.4, 0.5"
 ForwardDiff = "0.10"
 Glob = "1.3"
 Insolation = "0.3"
