Fix name conflict and pipeline ode example

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -170,7 +170,7 @@ steps:
     steps:
 
       - label: ":computer: baroclinic wave (ρe_tot) IMEXEuler"
-        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --t_end 40hours --dt 60secs --ode_algo ODE.IMEXEuler --max_newton_iters 2 --job_id sphere_baroclinic_wave_rhoe_IMEXEuler"
+        command: "julia --color=yes --project=ode_compat_examples examples/hybrid/driver.jl --t_end 40hours --dt 60secs --ode_algo ODE.IMEXEuler --max_newton_iters 2 --job_id sphere_baroclinic_wave_rhoe_IMEXEuler"
         artifact_paths: "sphere_baroclinic_wave_rhoe_IMEXEuler/*"
 
       - label: ":computer: baroclinic wave (ρe_tot) Float64"
