Add dycore consistency test

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -225,6 +225,13 @@ steps:
         agents:
           slurm_mem: 20GB
 
+      - label: ":dart: Dycore Consistency test"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --moist equil --subsidence Bomex --edmf_coriolis Bomex --ls_adv Bomex --turbconv edmf --turbconv_case Bomex --dt_save_to_sol 5mins --z_elem 60 --z_stretch false --z_max 3e3 --use_krylov_method true --job_id dycore_consistency --quicklook_reference_job_id compressible_edmf_bomex --dt 40secs --t_end 6hours --apply_limiter false --test_dycore_consistency true --debugging_tc true --dt_save_to_disk 5mins"
+        artifact_paths: "dycore_consistency/*"
+        soft_fail: true
+        agents:
+          slurm_mem: 20GB
+
   - group: "Milestones"
     steps:
 
