Add perf mode flag and experimental perf job

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -433,6 +433,12 @@ steps:
         agents:
           slurm_mem: 20GB
 
+      - label: ":rocket: flame graph: perf target (ρe_tot) with tracers"
+        command: "julia --color=yes --project=perf perf/flame.jl --job_id flame_perf_target_rhoe_tracers --perf_mode PerfExperimental"
+        artifact_paths: "flame_perf_target_rhoe_tracers/*"
+        agents:
+          slurm_mem: 20GB
+
       - label: ":mag::rocket: Invalidations"
         command: "julia --color=yes --project=perf perf/invalidations.jl --job_id invalidations"
         artifact_paths: "invalidations/*"
